--- a/templates/home.html
+++ b/templates/home.html
@@ -5,9 +5,9 @@
     <div class="hero-container container">
         <div class="hero-content text-center">
             <div class="col-sm-12 mr-auto text-center mb60 mb0-xs">
-                <h2 class="white-until-load">Send Your Condolences</h2>
+                <h3 class="white-until-load">Ikut Berkabung dengan Orang yang Anda Kasihi </h3>
                 <hr class="separator hidden-xs">
-                <h5 class="subheading white-until-load hidden-xs">Show that you Care</h5>
+                <h5 class="subheading white-until-load hidden-xs">Ringankan beban mereka dan tunjukan jika anda peduli</h5>
             </div>
 
             <div class="subscription white">
@@ -16,17 +16,15 @@
                         <div class="form-validation alert"></div>
                         <div class="form-group subscribe-form-input">
                             <span class="input-group-btn subscribe-top">
-                                <input type="email" name="email" id="subscribe-form-email" class="top-subscribe-input" placeholder="Enter email address" autocomplete="off"/>
+                                <input type="text" name="searchquery" id="searchquery" class="top-subscribe-input" placeholder="Cari posting" autocomplete="off"/>
                             </span>
                             <span class="input-group-btn sign-btn">
-                                <button class="subscribe-form-submit btn btn-primary" data-loading-text="Loading...">Sign Up</button>
+                                <button class="subscribe-form-submit btn btn-primary" data-loading-text="Loading...">Cari</button>
                             </span>
                         </div>
                     </form>
                 </div>
             </div>
-            <p class="subscribe-info hidden-xs"><i class="ion-information-circled"></i> You can trust us, we will never send you spam</p>
-
             <div class="home-blog-filters hidden-xs">
                 <div class="portfolio-filters-center cbp-l-filters-button" id="js-filters">
                     <div data-filter="*" class="cbp-filter-item-active cbp-filter-item">
