--- a/templates/login.html
+++ b/templates/login.html
@@ -1,22 +1,14 @@
 {% extends "base.html" %}
 
 {% block content %}
-<section class="page-title parallax bg-img-1">
-    <div class="page-title-content">
-        <div class="container">
-            <div class="col-sm-12 text-center white">
-                <h1>Login Now!</h1>
-                <hr class="separator">
-                <h5 class="subheading">Start showing your condolences!</h5>
-            </div>
-        </div>
-    </div>
-</section>
 <section class="pt100 pb90">
     <div class="container">
         <div class="row">
             <div class="col-md-3"></div>
             <div class="contact col-md-6">
+                <div class="custom-page-title mb90">
+                    <h3>Masuk ke akun anda</h3>
+                </div>
                 <div id="message">
                     {% with messages = get_flashed_messages() %}
                         {% if messages %}
@@ -37,7 +29,11 @@
                         <label for="password">Password:</label>
                         <input name="password" type="password" id="password" placeholder="Your Password*"/>
                     </div>
-                    <input type="submit" class="submit btn btn-md btn-primary" id="submit" value="Login" />
+                    <div class="form-group">
+                        <input class="custom-checkbox" type="checkbox" id="rememberme" name="remember" value="True"/>
+                        <label for="rememberme">Remember Me</label>
+                    </div>
+                    <input type="submit" class="btn btn-dark btn-fullwidth" id="submit" value="Login" />
                 </form>
             </div>
         </div>
