--- a/templates/login.html
+++ b/templates/login.html
@@ -30,7 +30,7 @@
                         <input name="password" type="password" id="password" placeholder="Your Password*"/>
                     </div>
                     <div class="form-group">
-                        <input class="custom-checkbox" type="checkbox" id="rememberme" name="remember" value="True"/>
+                        <input class="custom-checkbox" type="checkbox" id="rememberme" name="remember"/>
                         <label for="rememberme">Remember Me</label>
                     </div>
                     <input type="submit" class="btn btn-dark btn-fullwidth" id="submit" value="Login" />
