Changed Meta Desc

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,8 @@
     <title>Kaboong - Online Obituary</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Pusat Berita Duka Indonesia. Kami adalah platform untuk membantu menghubungkan berita duka kepada seluruh kerabat anda.">
+    <meta name="keywords" content="berduka, kematian, berita duka, berkabung, kaboong">
     <link href="/static/img/assets/favicon.png" rel="icon" type="image/png">
     <link href="/static/css/plugins.css" rel="stylesheet" type="text/css">
     <link href="/static/css/theme.css" rel="stylesheet" type="text/css">
