--- a/templates/user-profile.html
+++ b/templates/user-profile.html
@@ -44,7 +44,7 @@
                         </div>
                         <a href="/post/{{post.id}}" class="cbp-caption">
                             <div class="cbp-caption-defaultWrap">
-                                <img src="{{post.picture}}">
+                                <img src="../{{post.picture}}">
                             </div>
                             <div class="cbp-caption-activeWrap">
                                 <div class="cbp-l-caption-alignCenter">
@@ -70,7 +70,7 @@
                     <div class="col-md-3"></div>
                     <div class="col-md-6 no-listing">
                         <h5>You have no listing!</h5>
-                         <a href="#" class="btn btn-lg btn-ghost btn-circle btn-appear"><span>Start listing<i class="ion-plus"></i></span></a>
+                         <a href="/newpost" class="btn btn-lg btn-ghost btn-circle btn-appear"><span>Start listing<i class="ion-plus"></i></span></a>
                     </div>
                     <div class="col-md-3"></div>
 
