--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,18 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
     <link href="/static/css/custom.css" rel="stylesheet" type="text/css">
     <link href="/static/css/colors/midnight.css" id="color-scheme" rel="stylesheet" type="text/css">
+
+        <script src="/static/js/jquery.min.js"></script>
+    <script src="https://apis.google.com/js/platform.js?onload=start"> </script>
+<meta name="google-signin-client_id" content="777885038018-kls14gi2agbm8srdtcjsb041f5a7k1d2.apps.googleusercontent.com">
+
+<script>
+    gapi.load('auth2', function() {
+      auth2 = gapi.auth2.init({
+        client_id: '777885038018-kls14gi2agbm8srdtcjsb041f5a7k1d2.apps.googleusercontent.com',
+      });
+    });
+  </script>
 </head>
 <body>
 <nav class="navbar navbar-default fullwidth dark-menu">
@@ -104,7 +116,6 @@
         <!-- End Back To Top -->
 
         <!-- Scripts -->
-        <script src="/static/js/jquery.min.js"></script>
         <script src="/static/js/plugins.js"></script>
         <script src="/static/js/scripts.js"></script>
 </body>
