--- a/templates/home.html
+++ b/templates/home.html
@@ -14,14 +14,7 @@
                 <div class="input-group">
                     <form method="post" id="subscribe-form2">
                         <div class="form-validation alert"></div>
-                        <div class="form-group subscribe-form-input">
-                            <span class="input-group-btn subscribe-top">
-                                <input type="text" name="searchquery" id="searchquery" class="top-subscribe-input" placeholder="Cari posting" autocomplete="off"/>
-                            </span>
-                            <span class="input-group-btn sign-btn">
-                                <button class="subscribe-form-submit btn btn-primary" data-loading-text="Loading...">Cari</button>
-                            </span>
-                        </div>
+                        <a href="/newpost" class="btn btn-lg btn-ghost btn-circle btn-appear"><span>Post Berita<i class="ion-plus"></i></span></a>
                     </form>
                 </div>
             </div>
